WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
204350
[JSC] DisallowVMReentry and DeferGC should use WTF::ThreadSpecific instead of using WTF::threadSpecificKeyCreate directly
https://bugs.webkit.org/show_bug.cgi?id=204350
Summary
[JSC] DisallowVMReentry and DeferGC should use WTF::ThreadSpecific instead of...
Fujii Hironori
Reported
2019-11-19 04:10:26 PST
WTF provides two thread specific storages, ThreadSpecific and threadSpecificKeyCreate. Only DisallowVMReentry and DeferGC are using threadSpecificKeyCreate. WTF::ThreadSpecific should be used because it is a useful wrapper.
Attachments
Patch
(5.12 KB, patch)
2019-11-19 04:13 PST
,
Fujii Hironori
ysuzuki
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Fujii Hironori
Comment 1
2019-11-19 04:13:58 PST
Created
attachment 383860
[details]
Patch
Yusuke Suzuki
Comment 2
2019-11-19 13:58:57 PST
Comment on
attachment 383860
[details]
Patch r=me
Fujii Hironori
Comment 3
2019-11-19 18:10:05 PST
Committed
r252671
: <
https://trac.webkit.org/changeset/252671
>
Radar WebKit Bug Importer
Comment 4
2019-11-19 18:11:18 PST
<
rdar://problem/57344999
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug